<resources>
    <string name="app_name">Rollin\nMoment</string>
    <string name="app_push_name">롤링 모먼트 Push</string>
    <string name="app_push_channel_name">롤링 모먼트 알림</string>
    <string name="confirm">확인</string>
    <string name="complete">완료</string>
    <string name="no">아니요</string>
    <string name="clsoe">닫기</string>
    <string name="update_title">업데이트 안내</string>
    <string name="update_comment">앱을 이용하기 위해 업데이트가 필요해요.\n최신 버전으로 업데이트를 진행해주세요.</string>
    <string name="update_button">업데이트</string>
    <string name="update_info">업데이트 항목</string>
    <string name="no_internet_exception">인터넷에 연결되지 않았습니다.</string>
    <string name="sign_in_title">기억하고 싶은 순간, 함께 채우는 모먼트</string>
    <string name="sign_in_kakao">카카오로 로그인</string>
    <string name="sign_in_naver">네이버로 로그인</string>
    <string name="sign_in_email">이메일로 로그인</string>
    <string name="sign_in_bottom_description">가입함으로써 롤링모먼트의 </string>
    <string name="sign_in_bottom_description_privacy"><u>개인정보 처리방침</u></string>
    <string name="sign_in_bottom_description_privacy_with">과</string>
    <string name="sign_in_bottom_description_service"><u>서비스 이용약관</u></string>
    <string name="sign_in_bottom_description_service_with">에 동의합니다</string>
    <string name="edit_text_length_check">%d/%d</string>
    <string name="email">이메일</string>
    <string name="email_hint">이메일을 입력해주세요.</string>
    <string name="email_error">이메일 형식을 확인해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="sign_up_description">아직 롤링모먼트 회원이 아니신가요? <b><u>이메일로 회원가입</u></b> </string>
    <string name="sign_up_under_line"><u>이메일로 회원가입</u></string>
    <string name="sign_up">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">10자 이내로 작성해주세요.</string>
    <string name="sex">성별</string>
    <string name="sex_male">남자</string>
    <string name="sex_female">여자</string>
    <string name="sex_none">비밀</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="password_confirm_hint">비밀번호를 한번 더 입력해주세요.</string>
    <string name="password_error">영문 대/소문자, 숫자, 특수문자를 조합한 8~16자의\n비밀번호를 입력해주세요. (연속하는 문자, 숫자 금지)</string>
    <string name="password_confirm_error">비밀번호를 다시 확인해주세요.</string>
    <string name="nickname_error">한글, 영어, 숫자를 포함하여 10자 이내로 작성해주세요.</string>
    <string name="sign_up_done">회원가입에 성공했습니다!</string>
    <string name="moment_create_toolbar">모먼트 만들기</string>
    <string name="moment_edit_toolbar">모먼트 수정하기</string>
    <string name="moment_create_select_image">커버 이미지를 선택해주세요</string>
    <string name="moment_create_title_helper">모먼트 제목 (필수)</string>
    <string name="moment_create_title_hint">20자 이내의 제목을 지어주세요.</string>
    <string name="moment_crate_deadline_guide">마감일 선택 (필수)</string>
    <string name="moment_crate_deadline_helper">모먼트가 종료되는 마감일을 선택해주세요.\n마감일 이후에는 작성할 수 없어요.</string>
    <string name="moment_crate_deadline_7">7일 후</string>
    <string name="moment_crate_deadline_15">15일 후</string>
    <string name="moment_crate_deadline_30">30일 후</string>
    <string name="moment_crate_category_guide">카테고리 선택</string>
    <string name="moment_crate_category_hint">카테고리를 선택해주세요.</string>
    <string name="moment_create_memo_guide">모먼트 소개</string>
    <string name="moment_create_memo_hint">타인을 비방하거나 욕설, 혐오 표현, 개인정보 노출, 정치·종교 관련 내용 등 부적절한 내용이 포함된 글은 운영 정책에 따라 사전 고지 없이 삭제될 수 있습니다</string>
    <string name="moment_create_private_title">비공개로 만드시겠어요?</string>
    <string name="moment_create_private_content">비공개는 초대받은 사람만 확인할 수 있습니다.\n모먼트 제작 후에는 공개 여부를 수정할 수 없습니다.</string>
    <string name="moment_create_button">모먼트 만들기</string>
    <string name="moment_create_cancel_title">모먼트 만들기를 그만두시겠어요?</string>
    <string name="moment_create_cancel_content">이대로 나가면\n작성 중인 내용이 삭제 돼요!</string>
    <string name="moment_create_cancel_positive">네, 그만 둘래요</string>
    <string name="moment_create_cover_title">커버 이미지 선택</string>
    <string name="moment_create_cover_camera">카메라로 촬영</string>
    <string name="moment_create_cover_album">앨범에서 선택</string>
    <string name="moment_create_cover_type1">기념의 순간</string>
    <string name="moment_create_cover_type2">마음 전하기</string>
    <string name="moment_create_cover_type3">작별의 순간</string>
    <string name="moment_create_category_title">카테고리 선택</string>
    <string name="moment_create_cover_category_1">카메라 또는 앨범</string>
    <string name="moment_create_cover_category_2">기념의 순간</string>
    <string name="moment_create_cover_category_3">마음 전하기</string>
    <string name="moment_create_cover_category_4">작별의 순간</string>
    <string name="moment_create_cover_category_5">기본 커버 이미지</string>
    <string name="moment_edit_confirm">수정 완료</string>
    <string name="moment_edit_done">수정이 완료되었습니다</string>
    <string name="permission_title_camera">카메라에 대한 접근 권한 필요</string>
    <string name="permission_title_storage">앨범에 대한 접근 권한 필요</string>
    <string name="permission_title_alarm">알림에 대한 접근 권한 필요</string>
    <string name="permission_content_camera">카메라에 대한 권한 사용을 거부하였습니다.\n기능 사용을 위해 권한을 허용해주세요.</string>
    <string name="permission_content_storage">앨범에 대한 권한 사용을 거부하였습니다.\n기능 사용을 위해 권한을 허용해주세요.</string>
    <string name="permission_content_alarm">알림에 대한 권한 사용을 거부하였습니다.\n기능 사용을 위해 권한을 허용해주세요.</string>
    <string name="permission_button">설정하러 가기</string>
    <string name="trace_create_toolbar">흔적 작성</string>
    <string name="trace_create_info">한번 작성된 흔적은 수정 및 삭제가 불가합니다.</string>
    <string name="trace_create_edit_hint">남기고 싶은 흔적을 작성해주세요.</string>
    <string name="trace_create_ai_title">어떤 말로 시작해야할지 모르겠다면?</string>
    <string name="trace_create_ai_description">AI 제안하기는 1회만 가능합니다</string>
    <string name="trace_create_ai_button">AI로 제안받기</string>
    <string name="trace_create_alignment_title">텍스트 정렬</string>
    <string name="trace_create_alignment_left">좌측 정렬</string>
    <string name="trace_create_alignment_right">우측 정렬</string>
    <string name="trace_create_alignment_center">중앙 정렬</string>
    <string name="trace_create_font_helper">폰트 선택</string>
    <string name="trace_create_font_hint">폰트를 선택해주세요</string>
    <string name="trace_create_background">배경 컬러</string>
    <string name="trace_create_text_color">텍스트 컬러</string>
    <string name="trace_create_done">당신의 흔적이 모먼트에 기록되었습니다</string>
    <string name="trace_create_anonymous_title">익명으로 작성하시겠어요?</string>
    <string name="trace_create_anonymous_content">내 이름 대신 \'익명\'으로 표시됩니다.</string>
    <string name="trace_create_emoji_title">이모지 선택</string>
    <string name="trace_create_emoji_content">이모지를 선택하여 더 풍부한 감정을 표현해보세요.\n선택하면 작성 영역에 자동으로 붙여넣기 됩니다!</string>
    <string-array name="trace_create_emoji_list">
        <item>ദ്ദി◍•ᴗ•◍)</item>
        <item>(●´∀｀●)</item>
        <item>♪( ›◡‹ )</item>
        <item>(´ε｀ )♡</item>
        <item>( ˶\'ᵕ\'˶)</item>
        <item>≽^•⩊•^≼</item>
    </string-array>
    <string name="moment_detail_enroll">%s에 참여하시겠어요?</string>
    <string name="moment_detail_enroll_button">참여하기</string>
    <string name="moment_detail_empty">아직 흔적이 없어요</string>
    <string name="moment_detail_trace_count">%d개의 흔적이 남아있어요</string>
    <string name="moment_detail_invite">초대하기</string>
    <string name="moment_detail_trace_date_user">%s・%s</string>
    <string name="moment_detail_plus_trace">흔적남기기</string>
    <string name="moment_detail_empty_title">흔적을 작성해보세요!</string>
    <string name="moment_detail_expired">공유하기</string>
    <string name="moment_detail_delete_done">모먼트가 삭제되었습니다.</string>
    <string name="moment_detail_trace_mine">내흔적</string>
    <string name="moment_result_title">작성 기간이 마감되었어요!\n모먼트를 공유해보세요</string>
    <string name="moment_result_title_invite">모먼트 제작이 완료되었어요!\n초대장을 보내시겠어요?</string>
    <string name="moment_result_title_share">이 모먼트가 완성될 수 있도록,\n친구들의 흔적을 모아보세요</string>
    <string name="moment_result_kakao">카카오톡</string>
    <string name="moment_result_message">메시지</string>
    <string name="moment_result_share">링크 공유</string>
    <string name="moment_result_copy">링크 복사</string>
    <string name="moment_result_date">%d일 후</string>
    <string name="moment_kakao_title">Rollin`Moment 에서 롤링페이퍼가 도착했어요!\n모두의 마음이 담긴 순간, Rollin`Moment 에서 확인해보세요</string>
    <string name="moment_kakao_button">확인하러 가기</string>
    <string name="moment_category_we">결혼</string>
    <string name="moment_category_bi">생일</string>
    <string name="moment_category_fi">돌잔치</string>
    <string name="moment_category_gr">졸업</string>
    <string name="moment_category_fa">송별회</string>
    <string name="moment_category_ch">크리스마스</string>
    <string name="moment_category_te">스승의 날</string>
    <string name="moment_category_ap">감사</string>
    <string name="moment_category_che">응원</string>
    <string name="moment_category_co">고백</string>
    <string name="moment_category_pr">칭찬</string>
    <string name="moment_category_ce">축하</string>
    <string name="moment_category_all">전체</string>
    <string name="bottom_menu_home">홈</string>
    <string name="bottom_menu_search">탐색</string>
    <string name="bottom_menu_my_info">마이</string>
    <string name="process_ing">진행</string>
    <string name="process_end">완료</string>
    <string name="moment_expired_soon">마감임박</string>
    <string name="moment_user_trace_count">흔적 %d</string>
    <string name="moment_public">공개된 모먼트</string>
    <string name="moment_popular">인기 모먼트</string>
    <string name="moment_edit">수정하기</string>
    <string name="moment_save">이미지로 저장하기</string>
    <string name="moment_delete">삭제하기</string>
    <string name="moment_report">신고하기</string>
    <string name="moment_deadline">D-%d</string>
    <string name="moment_deadline_expired">완료</string>
    <string name="moment_empty_title">진행중인 모먼트가 없어요</string>
    <string name="moment_empty_description">소중한 순간을 나누어보세요!</string>
    <string name="moment_empty_title_expire">아직 완료된 모먼트가 없어요</string>
    <string name="moment_empty_description_expire">먼저 마음을 전해보는 것은 어때요?</string>
    <string name="moment_delete_title">모먼트를 정말 삭제하시겠어요?</string>
    <string name="moment_delete_description">삭제된 모먼트는 다시 복구되지 않아요!</string>
    <string name="moment_delete_positive">네, 삭제 할래요</string>
    <string name="moment_search_empty_title">아직 공개 모먼트가 없어요</string>
    <string name="moment_search_empty_description">모먼트로 특별한 순간을 나눠보세요!</string>
    <string name="moment_search_hint">모먼트 제목 검색</string>
    <string name="notification_title">알림</string>
    <string name="notification_info">30일 이내의 알림만 확인할 수 있어요.</string>
    <string name="notification_empty">새로운 알림이 없습니다.</string>
    <string name="my_info_alarm">알림</string>
    <string name="my_info_service">서비스 이용 약관</string>
    <string name="my_info_policy">개인정보처리방침</string>
    <string name="my_info_logout">로그아웃</string>
    <string name="my_info_withdraw">회원탈퇴</string>
    <string name="my_info_logout_dialog_title">로그아웃 하시겠어요?</string>
    <string name="my_info_withdraw_dialog_title">서비스를 탈퇴하시겠어요?</string>
    <string name="my_info_logout_dialog_positive">네, 로그아웃 할래요</string>
    <string name="my_info_withdraw_dialog_positive">네, 탈퇴할래요</string>
    <string name="moment_report_title">신고하시겠습니까?</string>
    <string name="moment_report_description">검토까지는 최대 24시간 소요됩니다.</string>
    <string name="moment_report_positive">네, 신고할래요</string>
    <string name="moment_report_done">신고가 접수되었습니다.</string>
    <string name="moment_search_recent_title">최근 검색</string>
    <string name="moment_search_recent_delete">전체 삭제</string>
    <string name="moment_search_empty">‘%s’에 대한 검색 결과가 없어요</string>
    <string name="moment_search_empty_content">검색어를 다시 입력해주세요.</string>
    <string name="moment_search_count_title">%d개</string>
    <string name="moment_search_title">의 검색된 모먼트</string>
    <string name="moment_user_info_edit_title">내 정보 수정</string>
    <string name="moment_user_withdraw">탈퇴하기</string>
    <string name="moment_user_info_update_success">정보 수정이 완료되었습니다.</string>
</resources>