<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutToolBar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent" />

    <kr.co.rolling.moment.ui.component.CommonEditText
        android:id="@+id/etNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:errorMessage="@string/nickname_error"
        app:helperText="@string/nickname"
        app:hintText="@string/nickname_hint"
        app:inputMaxLength="10"
        app:layout_constraintTop_toBottomOf="@id/layoutToolBar" />

    <TextView
        android:id="@+id/tvSex"
        style="@style/L314Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/sex"
        android:textColor="@color/C333333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNickName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSex">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_radio"
            android:button="@null"
            android:text="@string/sex_male"
            android:textAlignment="center"
            android:textColor="@color/selector_common_radio_text" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_radio"
            android:button="@null"
            android:text="@string/sex_female"
            android:textAlignment="center"
            android:textColor="@color/selector_common_radio_text" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_common_radio"
            android:button="@null"
            android:text="@string/sex_none"
            android:textAlignment="center"
            android:textColor="@color/selector_common_radio_text" />
    </RadioGroup>

    <kr.co.rolling.moment.ui.component.CommonEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:errorMessage="@string/email_error"
        app:helperText="@string/email"
        app:hintText="@string/email_hint"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="20dp"
        android:enabled="true"
        android:background="@drawable/selector_common_button"
        android:textColor="@color/selector_common_button_text"
        android:text="@string/confirm"
        android:id="@+id/btnConfirm"/>


</androidx.constraintlayout.widget.ConstraintLayout>