<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:src="@drawable/login_img"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/B316Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_title"
        android:textAlignment="center"
        android:textColor="@color/C4C4C4C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <include
        android:id="@+id/layoutKakao"
        layout="@layout/layout_sign_in_method"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <include
        android:id="@+id/layoutNaver"
        layout="@layout/layout_sign_in_method"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutKakao" />

    <include
        android:id="@+id/layoutEmail"
        layout="@layout/layout_sign_in_method"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutNaver" />

    <TextView
        android:id="@+id/tvSIgnUp"
        style="@style/L612Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_under_line"
        android:textColor="@color/C4C4C4C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail" />

    <TextView
        android:id="@+id/tvBottomDesc1"
        style="@style/L612Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in_bottom_description"
        android:textColor="@color/C999999"
        app:layout_constraintBottom_toTopOf="@id/tvBottomDesc5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBottomDesc2"
        style="@style/L612Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/sign_in_bottom_description_privacy"
        android:textColor="@color/C999999"
        app:layout_constraintStart_toEndOf="@id/tvBottomDesc1"
        app:layout_constraintTop_toTopOf="@id/tvBottomDesc1" />

    <TextView
        android:id="@+id/tvBottomDesc3"
        style="@style/L612Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_bottom_description_privacy_with"
        android:textColor="@color/C999999"
        app:layout_constraintStart_toEndOf="@id/tvBottomDesc2"
        app:layout_constraintTop_toTopOf="@id/tvBottomDesc1" />

    <TextView
        android:id="@+id/tvBottomDesc4"
        style="@style/L612Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/sign_in_bottom_description_service"
        android:textColor="@color/C999999"
        app:layout_constraintStart_toEndOf="@id/tvBottomDesc3"
        app:layout_constraintTop_toTopOf="@id/tvBottomDesc1" />

    <TextView
        android:id="@+id/tvBottomDesc5"
        style="@style/L612Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in_bottom_description_service_with"
        android:textColor="@color/C999999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>