<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_top_20_ffffff"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/tvSave"
        style="@style/L116Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/moment_save"
        android:textAlignment="center"
        android:textColor="@color/C171719"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEdit"
        style="@style/L116Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/moment_edit"
        android:textAlignment="center"
        android:textColor="@color/C171719"
        app:layout_constraintTop_toBottomOf="@id/tvSave" />

    <TextView
        android:id="@+id/tvDelete"
        style="@style/L116Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/moment_delete"
        android:textAlignment="center"
        android:textColor="@color/C171719"
        app:layout_constraintTop_toBottomOf="@id/tvEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>