<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:background="@drawable/shape_16_ffffff"
    android:paddingHorizontal="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/T418Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/update_title"
        android:textAlignment="center"
        android:textColor="@color/C171719"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContent"
        style="@style/B116Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_comment"
        android:textAlignment="center"
        android:textColor="@color/C4C4C4C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUpdateInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/CF6F6F6"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContent">

        <TextView
            android:id="@+id/tvUpdateInfo"
            style="@style/L414Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_info"
            android:textColor="@color/C4C4C4C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPositive"
        style="@style/L414Medium"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_6_000000"
        android:text="@string/update_button"
        android:textColor="@color/CFFFFFF"
        app:layout_constraintTop_toBottomOf="@id/layoutUpdateInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>